[package]
name = "enma"
version = "0.3.5"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde_json = "1.0"
getset = "0.1.1"
figlet-rs = "0.1.3"
log = "0.4"
serde_yaml = "0.8"
structopt = "0.3.22"
tracing-subscriber = { version = "0.3" , features = ["env-filter", "time", "fmt" , "std", "local-time"] } 
tracing = "0.1"
axum = "0.4"
axum-extra = "0.1"
tower-http = { version = "0.2", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
humantime-serde = "1.0.1"
tracing-log = "0.1.2"
hyper = "0.14"
time  = {version = "0.3", features = [] }
coult = "0.1.4"
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
axum-server = "0.3"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = 'abort'